--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -2,7 +2,7 @@ name: publish to nuget
 on:
   push:
     branches:
-      - master # Default release branch
+      - main # Default release branch
 jobs:
   publish:
     name: build, pack & publish
@@ -24,7 +24,7 @@ jobs:
           PROJECT_FILE_PATH: CommandResponse.Core/CommandResponse.Core.csproj
           
           # NuGet package id, used for version detection & defaults to project name
-          # PACKAGE_NAME: Core
+          PACKAGE_NAME: CommandResponse
           
           # Filepath with version info, relative to root of repository & defaults to PROJECT_FILE_PATH
           # VERSION_FILE_PATH: Directory.Build.props
