--- a/CommandResponse.Core/CommandResponse.Core.csproj
+++ b/CommandResponse.Core/CommandResponse.Core.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -8,6 +8,6 @@
     <Copyright>Elixin Software</Copyright>
     <PackageProjectUrl>https://github.com/ldlac/CommandResponse</PackageProjectUrl>
     <RepositoryUrl>https://github.com/ldlac/CommandResponse</RepositoryUrl>
+    <Version>1.0.1</Version>
   </PropertyGroup>
-
 </Project>
