--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -21,13 +21,13 @@ jobs:
         uses: rohith/publish-nuget@v2
         with:
           # Filepath of the project to be packaged, relative to root of repository
-          PROJECT_FILE_PATH: CommandResponse.Core
+          PROJECT_FILE_PATH: CommandResponse.Core/CommandResponse.Core.csproj
           
           # NuGet package id, used for version detection & defaults to project name
           PACKAGE_NAME: CommandResponse
           
           # Filepath with version info, relative to root of repository & defaults to PROJECT_FILE_PATH
-          VERSION_FILE_PATH: CommandResponse.Core.csproj
+          # VERSION_FILE_PATH: CommandResponse.Core.csproj
 
           # Regex pattern to extract version info in a capturing group
           VERSION_REGEX: \s*<Version>(.*)<\/Version>\s*
